Add support for links layer

--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
   },
   "dependencies": {
     "accessor-fn": "^1.2.2",
-    "kapsule": "^1.10.0"
+    "kapsule": "^1.10.0",
+    "tinycolor2": "^1.4.1"
   },
   "peerDependencies": {
     "three": "*"
