Refactor arcs curve functionality

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "accessor-fn": "^1.2.2",
+    "d3-geo": "^1.11.3",
     "kapsule": "^1.10.0",
     "tinycolor2": "^1.4.1"
   },
