Expose dash config props

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "accessor-fn": "^1.2.2",
     "d3-geo": "^1.11.3",
     "d3-scale": "^3.0.0",
+    "frame-ticker": "^1.0.3",
     "index-array-by": "^1.2.3",
     "kapsule": "^1.10.0",
     "tinycolor2": "^1.4.1"
