--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "index-array-by": "^1.2.6",
     "kapsule": "^1.12.1",
     "three-conic-polygon-geometry": "^1.1.2",
+    "three-fatline": "^0.2.3",
     "three-geojson-geometry": "^1.0.0",
     "tinycolor2": "^1.4.1"
   },
