--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "tinycolor2": "^1.4.1"
   },
   "peerDependencies": {
-    "three": "*"
+    "three": ">=0.110.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
