--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "unpkg": "dist/three-globe.min.js",
   "main": "dist/three-globe.common.js",
   "module": "dist/three-globe.module.js",
-  "types": "src/index.d.ts",
+  "types": "dist/three-globe.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/vasturiano/three-globe.git"
@@ -26,18 +26,15 @@
   "bugs": {
     "url": "https://github.com/vasturiano/three-globe/issues"
   },
-  "files": [
-    "dist/**/*",
-    "example/**/*",
-    "src/**/*"
-  ],
   "scripts": {
     "build": "rimraf dist && rollup -c",
-    "dev": "rollup -c -w",
-    "minify": "terser dist/three-globe.js -o dist/three-globe.min.js -c -m --comments '/Version/'",
-    "build-module": "rollup -c rollup.config.module.js",
-    "prepare": "npm run build && npm run minify && npm run build-module"
+    "dev": "rollup -w -c rollup.config.dev.js",
+    "prepare": "npm run build"
   },
+  "files": [
+    "dist/**/*",
+    "example/**/*"
+  ],
   "dependencies": {
     "@tweenjs/tween.js": "^18.5.0",
     "accessor-fn": "^1.2.3",
@@ -71,6 +68,8 @@
     "rimraf": "^3.0.2",
     "rollup": "^2.0.6",
     "rollup-plugin-babel": "^4.4.0",
-    "terser": "^4.6.6"
+    "rollup-plugin-dts": "^1.3.0",
+    "rollup-plugin-terser": "^5.3.0",
+    "typescript": "^3.8.3"
   }
 }
