--- a/package.json
+++ b/package.json
@@ -50,24 +50,24 @@
     "three-conic-polygon-geometry": "^1.3.7",
     "three-fatline": "^0.3.0",
     "three-geojson-geometry": "^1.1.0",
-    "three-glow-mesh": "^0.1.1",
+    "three-glow-mesh": "^0.1.2",
     "tinycolor2": "^1.4.1"
   },
   "peerDependencies": {
     "three": ">=0.88.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.5",
+    "@babel/core": "^7.11.0",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.10.4",
-    "@babel/preset-env": "^7.10.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
+    "@babel/preset-env": "^7.11.0",
+    "@rollup/plugin-babel": "^5.1.0",
     "@rollup/plugin-commonjs": "^13.0.2",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^8.4.0",
     "@types/three": ">=0.88.0",
     "rimraf": "^3.0.2",
-    "rollup": "^2.22.2",
-    "rollup-plugin-babel": "^4.4.0",
+    "rollup": "^2.23.0",
     "rollup-plugin-dts": "^1.4.9",
     "rollup-plugin-terser": "^6.1.0",
     "typescript": "^3.9.7"
