--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "h3-js": "^3.7.0",
     "index-array-by": "^1.3.0",
     "kapsule": "^1.13.3",
-    "three-conic-polygon-geometry": "^1.3.8",
+    "three-conic-polygon-geometry": "1.4.0",
     "three-fatline": "^0.4.1",
     "three-geojson-geometry": "^1.1.0",
     "three-glow-mesh": "^0.1.2",
@@ -57,18 +57,18 @@
     "three": ">=0.88.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
+    "@babel/core": "^7.12.9",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
-    "@babel/preset-env": "^7.12.1",
-    "@rollup/plugin-babel": "^5.2.1",
-    "@rollup/plugin-commonjs": "^16.0.0",
+    "@babel/preset-env": "^7.12.7",
+    "@rollup/plugin-babel": "^5.2.2",
+    "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^10.0.0",
+    "@rollup/plugin-node-resolve": "^11.0.0",
     "@types/three": ">=0.88.0",
     "rimraf": "^3.0.2",
-    "rollup": "^2.33.3",
-    "rollup-plugin-dts": "^1.4.14",
+    "rollup": "^2.34.0",
+    "rollup-plugin-dts": "^2.0.0",
     "rollup-plugin-terser": "^7.0.2",
     "typescript": "^4.1.2"
   }
