--- a/package.json
+++ b/package.json
@@ -50,24 +50,23 @@
     "three-conic-polygon-geometry": "1.4.2",
     "three-fatline": "^0.4.2",
     "three-geojson-geometry": "^1.1.2",
-    "three-glow-mesh": "^0.1.2",
     "tinycolor2": "^1.4.2"
   },
   "peerDependencies": {
-    "three": ">=0.88.0 <=0.124.0"
+    "three": ">=0.88.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
-    "@babel/preset-env": "^7.12.11",
+    "@babel/core": "^7.12.13",
+    "@babel/plugin-proposal-class-properties": "^7.12.13",
+    "@babel/plugin-proposal-object-rest-spread": "^7.12.13",
+    "@babel/preset-env": "^7.12.13",
     "@rollup/plugin-babel": "^5.2.3",
     "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.1.1",
-    "@types/three": ">=0.88.0 <=0.124.0",
+    "@types/three": ">=0.88.0",
     "rimraf": "^3.0.2",
-    "rollup": "^2.38.3",
+    "rollup": "^2.38.4",
     "rollup-plugin-dts": "^2.0.1",
     "rollup-plugin-terser": "^7.0.2",
     "typescript": "^4.1.3"
