--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "rollup": "^2.39.0",
     "rollup-plugin-dts": "^2.0.1",
     "rollup-plugin-terser": "^7.0.2",
-    "typescript": "^4.1.5"
+    "three": "^0.126.1",
+    "typescript": "^4.2.3"
   }
 }
