--- a/package.json
+++ b/package.json
@@ -36,21 +36,21 @@
     "example/**/*"
   ],
   "dependencies": {
-    "@tweenjs/tween.js": "^18.6.4",
-    "accessor-fn": "^1.3.0",
-    "d3-geo": "^2.0.1",
-    "d3-interpolate": "^2.0.1",
-    "d3-scale": "^3.3.0",
-    "data-joint": "^1.2.4",
-    "earcut": "^2.2.2",
-    "frame-ticker": "^1.0.3",
-    "h3-js": "^3.7.2",
-    "index-array-by": "^1.3.1",
-    "kapsule": "^1.13.4",
-    "three-conic-polygon-geometry": "1.4.3",
-    "three-fatline": "^0.5.0",
-    "three-geojson-geometry": "^1.1.3",
-    "tinycolor2": "^1.4.2"
+    "@tweenjs/tween.js": "18",
+    "accessor-fn": "1",
+    "d3-geo": "1 - 3",
+    "d3-interpolate": "1 - 3",
+    "d3-scale": "1 - 4",
+    "data-joint": "^1.2",
+    "earcut": "2",
+    "frame-ticker": "1",
+    "h3-js": "3",
+    "index-array-by": "1",
+    "kapsule": "^1.13",
+    "three-conic-polygon-geometry": "^1.4",
+    "three-fatline": "^0.5",
+    "three-geojson-geometry": "^1.1",
+    "tinycolor2": "^1.4"
   },
   "peerDependencies": {
     "three": ">=0.88.0"
