--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   ],
   "author": {
     "name": "Vasco Asturiano",
-    "url": "http://bl.ocks.org/vasturiano"
+    "url": "https://github.com/vasturiano"
   },
   "license": "MIT",
   "bugs": {
