--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "example/**/*"
   ],
   "dependencies": {
-    "@tweenjs/tween.js": "18",
+    "@tweenjs/tween.js": "18 - 19",
     "accessor-fn": "1",
     "d3-geo": "1 - 3",
     "d3-interpolate": "1 - 3",
@@ -54,7 +54,7 @@
     "index-array-by": "1",
     "kapsule": "^1.14",
     "three-conic-polygon-geometry": "^1.6",
-    "three-fatline": "^0.5",
+    "three-fatline": "^0.6",
     "three-geojson-geometry": "^1.3",
     "tinycolor2": "^1.6"
   },
@@ -62,19 +62,19 @@
     "three": ">=0.125.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/preset-env": "^7.20.2",
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
     "@rollup/plugin-babel": "^6.0.3",
-    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-commonjs": "^24.1.0",
     "@rollup/plugin-json": "^6.0.0",
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "@rollup/plugin-terser": "^0.4.0",
+    "@rollup/plugin-node-resolve": "^15.0.2",
+    "@rollup/plugin-terser": "^0.4.1",
     "@types/three": ">=0.125.0",
-    "rimraf": "^4.1.2",
-    "rollup": "^3.15.0",
-    "rollup-plugin-dts": "^5.2.0",
-    "three": "^0.149.0",
-    "typescript": "^4.9.5"
+    "rimraf": "^5.0.0",
+    "rollup": "^3.20.2",
+    "rollup-plugin-dts": "^5.3.0",
+    "three": "^0.151.3",
+    "typescript": "^5.0.4"
   },
   "engines": {
     "node": ">=12"
