--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "module": "dist/three-globe.mjs",
   "types": "dist/three-globe.d.ts",
   "exports": {
+    "types": "dist/three-globe.d.ts",
     "umd": "./dist/three-globe.min.js",
     "default": "./dist/three-globe.mjs"
   },
@@ -44,22 +45,22 @@
   "dependencies": {
     "@tweenjs/tween.js": "18 - 19",
     "accessor-fn": "1",
-    "d3-geo": "1 - 3",
-    "d3-interpolate": "1 - 3",
-    "d3-scale": "1 - 4",
-    "data-joint": "^1.3",
+    "d3-geo": "3",
+    "d3-interpolate": "3",
+    "d3-scale": "4",
+    "data-joint": "1",
     "earcut": "2",
     "frame-ticker": "1",
     "h3-js": "4",
     "index-array-by": "1",
-    "kapsule": "^1.14",
-    "three-conic-polygon-geometry": "^1.6",
+    "kapsule": "1",
+    "three-conic-polygon-geometry": "1",
     "three-fatline": "^0.6",
-    "three-geojson-geometry": "^1.3",
-    "tinycolor2": "^1.6"
+    "three-geojson-geometry": "1",
+    "tinycolor2": "1"
   },
   "peerDependencies": {
-    "three": ">=0.125.0"
+    "three": ">=0.125"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
