--- a/package.json
+++ b/package.json
@@ -45,9 +45,12 @@
   "dependencies": {
     "@tweenjs/tween.js": "18 - 21",
     "accessor-fn": "1",
+    "d3-array": "3",
+    "d3-color": "3",
     "d3-geo": "3",
     "d3-interpolate": "3",
     "d3-scale": "4",
+    "d3-scale-chromatic": "3",
     "data-joint": "1",
     "earcut": "2",
     "frame-ticker": "1",
