--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "d3-color": "3",
     "d3-geo": "3",
     "d3-interpolate": "3",
+    "d3-octree": "1",
     "d3-scale": "4",
     "d3-scale-chromatic": "3",
     "data-joint": "1",
