Use new class based kapsule

--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "frame-ticker": "1",
     "h3-js": "4",
     "index-array-by": "1",
-    "kapsule": "1",
+    "kapsule": "^1.16",
     "three-conic-polygon-geometry": "1",
     "three-geojson-geometry": "1",
     "tinycolor2": "1",
