Do data binding internally to prevent interference from external data objects

--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "d3-interpolate": "3",
     "d3-scale": "4",
     "d3-scale-chromatic": "3",
-    "data-joint": "1",
+    "data-bind-mapper": "1",
     "frame-ticker": "1",
     "h3-js": "4",
     "index-array-by": "1",
