--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "kapsule": "^1.16",
     "three-conic-polygon-geometry": "2",
     "three-geojson-geometry": "2",
-    "three-slippy-map-globe": "^0.7.1",
+    "three-slippy-map-globe": "1",
     "tinycolor2": "1",
     "yaot": "^1.1"
   },
@@ -75,10 +75,10 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@types/three": ">=0.154.0",
     "rimraf": "^6.0.1",
-    "rollup": "^4.28.1",
+    "rollup": "^4.30.1",
     "rollup-plugin-dts": "^6.1.1",
-    "three": "^0.171.0",
-    "typescript": "^5.7.2"
+    "three": "^0.172.0",
+    "typescript": "^5.7.3"
   },
   "engines": {
     "node": ">=12"
