--- a/package.json
+++ b/package.json
@@ -56,11 +56,11 @@
     "h3-js": "4",
     "index-array-by": "1",
     "kapsule": "^1.16",
+    "taichi.js": "^0.0.36",
     "three-conic-polygon-geometry": "2",
     "three-geojson-geometry": "2",
     "three-slippy-map-globe": "1",
-    "tinycolor2": "1",
-    "yaot": "^1.1"
+    "tinycolor2": "1"
   },
   "peerDependencies": {
     "three": ">=0.154"
@@ -77,6 +77,7 @@
     "rimraf": "^6.0.1",
     "rollup": "^4.30.1",
     "rollup-plugin-dts": "^6.1.1",
+    "rollup-plugin-taichi": "^0.0.3",
     "three": "^0.172.0",
     "typescript": "^5.7.3"
   },
