--- a/package.json
+++ b/package.json
@@ -56,18 +56,18 @@
     "h3-js": "4",
     "index-array-by": "1",
     "kapsule": "^1.16",
-    "taichi-esm": "1",
     "three-conic-polygon-geometry": "2",
     "three-geojson-geometry": "2",
     "three-slippy-map-globe": "1",
-    "tinycolor2": "1"
+    "tinycolor2": "1",
+    "yaot": "^1.1"
   },
   "peerDependencies": {
     "three": ">=0.154"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.0",
-    "@babel/preset-env": "^7.26.0",
+    "@babel/core": "^7.26.7",
+    "@babel/preset-env": "^7.26.7",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^28.0.2",
     "@rollup/plugin-json": "^6.1.0",
@@ -75,10 +75,9 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@types/three": ">=0.154.0",
     "rimraf": "^6.0.1",
-    "rollup": "^4.30.1",
+    "rollup": "^4.34.1",
     "rollup-plugin-dts": "^6.1.1",
-    "rollup-plugin-taichi": "^0.0.3",
-    "three": "^0.172.0",
+    "three": "^0.173.0",
     "typescript": "^5.7.3"
   },
   "engines": {
