--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Globe data visualization as a ThreeJS reusable 3D object",
   "type": "module",
   "unpkg": "dist/three-globe.min.js",
+  "jsdelivr": "dist/three-globe.min.js",
   "main": "dist/three-globe.mjs",
   "module": "dist/three-globe.mjs",
   "types": "dist/three-globe.d.ts",
